# AnotherHelloOpenCV

./: CMakeLists.txt  README.md  main.cpp
